--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <title> lokinet router monitor </title>
     <script src="static/app.js" type="text/javascript" charset="utf-8"  ></script>
     <script src="static/socket.io.min.js" type="text/javascript" charset="utf-8" ></script>
   </head>
