--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title> lokinet router monitor </title>
     <script src="static/app.js" type="text/javascript" charset="utf-8"  ></script>
     <script src="static/socket.io.min.js" type="text/javascript" charset="utf-8" ></script>
+    <link rel=stylesheet href="static/style.css" />
   </head>
   <body>
     <div id="root">
